prevent images from growing over the content by adding overflow: hidden to the container element

--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -81,6 +81,7 @@ $spacing: 3rem
 
 .pageContentViewItem
 	flex-grow: 2
+	overflow: hidden
 .oneColumnViewItem
 	width: 100%
 	padding: $paddingTop 0
